# toy_hierarchy

./: README.md  pyproject.toml  setup.sh  toy_model_hierarchy.ipynb
exercises/part4_superposition_and_saes/: solutions.py  utils.py
notebooks/: create_tree.ipynb  edit_plotting.ipynb  experiments.ipynb  experiments_saes_on_trees.ipynb  experiments_scale.ipynb  experiments_scale_2.ipynb  experiments_scale_tree.ipynb  experiments_scale_tree_full_paths.ipynb
scripts/: model.py  utils_updated.py
