[tool.poetry]
name = "toy_hierarchy"
version = "0.1.0"
description = "\"Toy Models of Hierarchy\""
authors = ["Daniel Lee <dajale423@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformer-lens = "^1.14.0"
eindex-callum = {git = "https://github.com/callummcdougall/eindex.git"}
jaxtyping = "^0.2.25"
jupyter = "^1.0.0"
einops = "^0.7.0"
plotly = "^5.19.0"
matplotlib = "3.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
